--- a/include/shmem_defines.h.in
+++ b/include/shmem_defines.h.in
@@ -28,47 +28,6 @@
 # define _WUR
 #endif
 
-/*
- * TODO: need better detection
- */
-#if defined(__clang__)
-
-# define _DEPRECATED_BY(...)                                        \
-    __attribute__((deprecated("use '" #__VA_ARGS__ "' instead")))
-# define _DEPRECATED                            \
-    __attribute__((deprecated))
-
-#elif defined(__OPEN64__)
-
-/* not supported */
-
-# define _DEPRECATED_BY(...)
-# define _DEPRECATED
-
-#elif defined(__GNUC__)
-
-#define _DEPRECATED                             \
-    __attribute__((deprecated))
-
-/* GCC has extended attribute syntax from 4.5 onward */
-
-# if (__GNUC__ >= 5) || (__GNUC__ == 4 && __GNUC_MINOR__ >= 5)
-#  define _DEPRECATED_BY(...)                                       \
-    __attribute__((deprecated("use '" #__VA_ARGS__ "' instead")))
-#else
-# define _DEPRECATED_BY(...)                    \
-    _DEPRECATED
-#endif
-
-#else
-
-/* fallback */
-
-# define _DEPRECATED_BY(...)
-# define _DEPRECATED
-
-#endif  /* compiler deprecation check */
-
 #define SHMEM_MAJOR_VERSION @SHMEM_MAJOR_VERSION@
 #define SHMEM_MINOR_VERSION @SHMEM_MINOR_VERSION@
 #define SHMEM_MAX_NAME_LEN @SHMEM_MAX_NAME_LEN@
@@ -129,4 +88,4 @@ enum shmem_cmp_constants {
 #define _SHMEM_CMP_LT                   SHMEM_CMP_LT
 #define _SHMEM_CMP_GE                   SHMEM_CMP_GE
 
-#endif  /* _SHMEM_DEFINES_HH */
+#endif  /* ! _SHMEM_DEFINES_H */
