--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,28 +13,34 @@ shmemi_cppflags        = -I$(srcdir)/$(shmemi_dir)
 shmemi_ldflags         = -L$(shmemi_dir)
 shmemi_libs            = -lshmemi
 
-SUBDIRS                = $(shmemu_dir) $(shmemc_dir) $(shmemi_dir)
+SUBDIRS                = $(shmemu_dir) \
+				$(shmemc_dir) \
+				$(shmemi_dir)
 
 LIBSHMEM_SOURCES       = init.c malloc.c version.c atomics.c cache.c \
 				pe.c ptr.c accessible.c \
 				put.c get.c
 
+
+if ENABLE_FORTRAN
+LIBSHMEM_SOURCES      += fortran.c fortran-mem.c
+endif
+
 if ENABLE_EXPERIMENTAL
 LIBSHMEM_SOURCES      += wtime.c xor.c
 endif
 
+MY_INCLUDE             = -I../include
 
 lib_LTLIBRARIES        = libshmem.la
 libshmem_la_SOURCES    = $(LIBSHMEM_SOURCES)
 libshmem_la_CFLAGS     = $(AM_CFLAGS)
-libshmem_la_CPPFLAGS   = $(shmemu_cppflags)
+libshmem_la_CPPFLAGS   = $(shmemu_cppflags) $(MY_INCLUDE)
 libshmem_la_LDFLAGS    = -version-info 0:0:0
 
 lib_LIBRARIES          = libshmem.a
 libshmem_a_SOURCES     = $(LIBSHMEM_SOURCES)
-libshmem_a_CPPFLAGS    = $(shmemu_cppflags)
-
-include_HEADERS        = shmem_defines.h
+libshmem_a_CPPFLAGS    = $(shmemu_cppflags) $(MY_INCLUDE)
 
 bin_PROGRAMS           = osh_info
 osh_info_SOURCES       = osh_info.c
