Pass pmix link flags to scripts (this needs to be handled better and coordinated with pkg-config

--- a/src/shmemi/Makefile.am
+++ b/src/shmemi/Makefile.am
@@ -7,11 +7,13 @@ LIBSHMEMI_SOURCES      = shmemi.c \
 
 SHMEMX_CPPFLAGS        = -I$(srcdir)/../shmemu -I$(srcdir)/../shmemc
 
+PMIX_CPPFLAGS          = @PMIX_CPPFLAGS@
+
 lib_LTLIBRARIES        = libshmemi.la
 libshmemi_la_SOURCES   = $(LIBSHMEMI_SOURCES)
 libshmemi_la_CFLAGS    = $(AM_CFLAGS)
 libshmemi_la_CPPFLAGS  = $(PMIX_CPPFLAGS) $(SHMEMX_CPPFLAGS)
-libshmemi_la_LDFLAGS   = -version-info 0:0:0 $(PMIX_LDFLAGS)
+libshmemi_la_LDFLAGS   = -version-info 0:0:0
 
 lib_LIBRARIES          = libshmemi.a
 libshmemi_a_SOURCES    = $(LIBSHMEMI_SOURCES)
