Separate shmemc implementations out of header

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -1,4 +1,4 @@
-LIBSHMEMC_SOURCES      = dummy.c
+LIBSHMEMC_SOURCES      = put.c get.c lock.c
 
 lib_LTLIBRARIES        = libshmemc.la
 libshmemc_la_SOURCES   = $(LIBSHMEMC_SOURCES)
