Add stubs for collect routines

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -29,6 +29,7 @@ LIBSHMEM_SOURCES       = \
 				put-strided.c get-strided.c \
 				put-nbi.c get-nbi.c \
 				reductions.c \
+				fcollect.c collect.c \
 				barrier.c \
 				cache.c
 
