Stub implementation for atomics.  Can't convince cpp to pass __WORDSIZE into another macro...

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,6 +30,7 @@ LIBSHMEM_SOURCES       = \
 				put-nbi.c get-nbi.c \
 				reductions.c \
 				fcollect.c collect.c \
+				broadcast.c \
 				barrier.c \
 				cache.c
 
