--- a/include/shmem/defs.fh.in
+++ b/include/shmem/defs.fh.in
@@ -1,16 +1,16 @@
 !     OpenSHMEM release
 
       integer SHMEM_MAJOR_VERSION
-      parameter ( SHMEM_MAJOR_VERSION = 1 )
+      parameter ( SHMEM_MAJOR_VERSION = @SHMEM_MAJOR_VERSION@ )
       integer SHMEM_MINOR_VERSION
-      parameter ( SHMEM_MINOR_VERSION = 2 )
+      parameter ( SHMEM_MINOR_VERSION = @SHMEM_MINOR_VERSION@ )
 
 ! one less than C's length
       integer SHMEM_MAX_NAME_LEN
-      parameter ( SHMEM_MAX_NAME_LEN = 64 - 1 )
+      parameter ( SHMEM_MAX_NAME_LEN = @SHMEM_MAX_NAME_LEN@ - 1 )
 
       character ( len = SHMEM_MAX_NAME_LEN ) SHMEM_VENDOR_STRING
-      parameter ( SHMEM_VENDOR_STRING = "UH Reference Implementation" )
+      parameter ( SHMEM_VENDOR_STRING = '@SHMEM_VENDOR_STRING@' )
 
 !     collectives
 
