--- a/scripts/oshcc.in
+++ b/scripts/oshcc.in
@@ -8,11 +8,13 @@ shmem_dir=@prefix@
 shmem_include=@includedir@
 shmem_lib=@libdir@
 
-pmixlib_stanza="@PMIX_LDFLAGS@"
+pmixlib_stanza="@PMIX_LIBS@"
+
+ucx_stanza="@UCX_LIBS@"
 
 shmemlib_ldflags="-L$shmem_lib -Wl,-rpath -Wl,$shmem_lib"
 shmemlib_libs="-lshmem -lshmemi -lshmemc -lshmemu"
-shmemlib_stanza="$shmemlib_ldflags $shmemlib_libs $pmixlib_stanza"
+shmemlib_stanza="$shmemlib_ldflags $shmemlib_libs $pmixlib_stanza $ucx_stanza"
 
 # check to see if linking required: if not, throw away link args
 for c in $@
