--- a/pkgconfig/osss-openshmem.pc.in
+++ b/pkgconfig/osss-openshmem.pc.in
@@ -6,7 +6,7 @@ URL: @PACKAGE_URL@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 #
-Libs: -L@libdir@ -Wl,-rpath,@libdir@ -lshmem -lshmemi -lshmemc -lshmemu @PMIX_LIBS@
+Libs: -L@libdir@ -lshmem -lshmemi -lshmemc -lshmemu @PMIX_LIBS@
 Cflags: -I@includedir@
 #
 Provides: @PACKAGE@
