--- a/src/shmemc/gasnet/oshcxx.tmpl.in
+++ b/src/shmemc/gasnet/oshcxx.tmpl.in
@@ -14,10 +14,8 @@ shmemlib_ldflags="-L$shmem_lib -Wl,-rpath -Wl,$shmem_lib"
 shmemlib_libs="-lshmem -lshmemi -lshmemc -lshmemu -lshmemc-gasnet""
 shmemlib_stanza="$shmemlib_ldflags $shmemlib_libs $pmixlib_stanza"
 
-# set to whichever comms library chosen
-comms_stanza="@COMMS_LIBS@"
+comms_stanza="%GASNET_LDFLAGS% %GASNET_LIBS%"
 
-# and make it available
 shmemlib_stanza="$shmemlib_stanza $comms_stanza"
 
 # check to see if linking required: if not, throw away link args
