Various fixes of issues found in compilation.
Mainly adding gasnet source code, and a little hack to define a symbol
to at least get things to compile.  Parts of code commented out, runs
will crash in interesting ways.

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS                = gasnet
 
-LIBSHMEMC_SOURCES      = put.c get.c lock.c getenv.c
+LIBSHMEMC_SOURCES      = put.c get.c lock.c
 
 lib_LTLIBRARIES        = libshmemc.la
 libshmemc_la_SOURCES   = $(LIBSHMEMC_SOURCES)
