--- a/src/shmemc/gasnet/oshcc.tmpl.in
+++ b/src/shmemc/gasnet/oshcc.tmpl.in
@@ -1,7 +1,5 @@
 #!/bin/sh
 
-compiler="${OSH_CC-@CC@}"
-
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 shmem_dir=@prefix@
@@ -11,7 +9,7 @@ shmem_lib=@libdir@
 pmixlib_stanza="@PMIX_LIBS@"
 
 shmemlib_ldflags="-L$shmem_lib -Wl,-rpath -Wl,$shmem_lib"
-shmemlib_libs="-lshmem -lshmemi -lshmemc -lshmemu -lshmemc-gasnet"
+shmemlib_libs="-lshmem -lshmemi -lshmemc -lshmemc-gasnet -lshmemu"
 shmemlib_stanza="$shmemlib_ldflags $shmemlib_libs $pmixlib_stanza"
 
 comms_stanza="%GASNET_LDFLAGS% %GASNET_LIBS%"
@@ -19,11 +17,15 @@ comms_stanza="%GASNET_LDFLAGS% %GASNET_LIBS%"
 shmemlib_stanza="$shmemlib_stanza $comms_stanza"
 
 # check to see if linking required: if not, throw away link args
+
+compiler="${OSH_CC-%GASNET_LD%}"
+
 for c in $@
 do
     case $c in
         -[cES])
             shmemlib_stanza=""
+            compiler="${OSH_CC-%GASNET_CC%}"
             ;;
         *)
             ;;
