Moving the PMI checks into the ucx directory, as gasnet doesn't need them.  Could maybe move to a separate directory in case needed by something else in future

--- a/src/shmemc/ucx/Makefile.am
+++ b/src/shmemc/ucx/Makefile.am
@@ -1,6 +1,14 @@
+PMIX_CFLAGS            = @PMIX_CFLAGS@
+
+OTHER_CPPFLAGS         = -I$(srcdir)/../../shmemu -I$(srcdir)/../../shmemi
+
 lib_LIBRARIES          = libshmemc-ucx.a
-libshmemc_ucx_a_SOURCES    = comms.c
-libshmemc_ucx_a_CFLAGS = $(UCX_CFLAGS)
+libshmemc_ucx_a_SOURCES    = comms.c \
+				pmix-client.c
+#				pmi1-client.c
+#				pmi2-client.c
+
+libshmemc_ucx_a_CFLAGS = $(UCX_CFLAGS) $(PMIX_CFLAGS) $(OTHER_CPPFLAGS)
 
 MY_WRAPPERS       = oshcc oshrun
 
