Reworking over atomics and put/get API internally.  Wanted to go to 32/64 bit for atomics, and bulk for put/get, but need to pass some things around for atomicity-guarantees (see spec 1.3, sec. 4.2).  So use bulk for put/get as that closely matches the GASNet/UCX usage, and we'll provide per-type atomics at the shmemc layer.

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -4,7 +4,7 @@ else
 SUBDIRS                = gasnet
 endif
 
-LIBSHMEMC_SOURCES      = put.c get.c lock.c
+LIBSHMEMC_SOURCES      = lock.c # put.c get.c
 
 lib_LTLIBRARIES        = libshmemc.la
 libshmemc_la_SOURCES   = $(LIBSHMEMC_SOURCES)
