--- a/src/shmemc/gasnet/Makefile.am
+++ b/src/shmemc/gasnet/Makefile.am
@@ -1,7 +1,14 @@
 include @GASNET_MAKE_FRAGMENT@
 
 lib_LIBRARIES          = libshmemc-gasnet.a
-libshmemc_gasnet_a_SOURCES    = bail.c service.c comms.c gvhack.c # lock.c
+
+libshmemc_gasnet_a_SOURCES    = bail.c \
+				service.c \
+				comms.c \
+				gvhack.c \
+				put-strided.c \
+				get-strided.c # lock.c
+
 libshmemc_gasnet_a_CPPFLAGS = $(GASNET_CPPFLAGS) \
 				-I$(top_srcdir)/src/shmemi \
 				-I$(top_srcdir)/src/shmemu \
