Regularize the shmemc put/get interface.  Let the upper layer work out how to set up sizes.  This comports with both UCX and GASNet interfaces.

--- a/src/shmemc/gasnet/Makefile.am
+++ b/src/shmemc/gasnet/Makefile.am
@@ -12,7 +12,8 @@ libshmemc_gasnet_a_SOURCES    = bail.c \
 libshmemc_gasnet_a_CPPFLAGS = $(GASNET_CPPFLAGS) \
 				-I$(top_srcdir)/src/shmemi \
 				-I$(top_srcdir)/src/shmemu \
-				-I$(top_srcdir)/src/shmemc
+				-I$(top_srcdir)/src/shmemc \
+				-I../../../include
 # libshmemc_gasnet_a_CFLAGS = $(GASNET_CFLAGS)
 
 MY_WRAPPERS       = oshcc oshrun
