Add simple s/w strided ops
remove checks for malloc and co to avoid the rpl_ rename!
(e.g. https://lists.gnu.org/archive/html/automake/2003-05/msg00018.html)

--- a/src/shmemc/ucx/Makefile.am
+++ b/src/shmemc/ucx/Makefile.am
@@ -2,10 +2,12 @@ PMIX_CFLAGS            = @PMIX_CFLAGS@
 
 OTHER_CPPFLAGS         = -I$(srcdir)/../../shmemu \
 				-I$(srcdir)/../../shmemi \
+				-I$(srcdir)/../../shmemc \
 				-I../../../include
 
 lib_LIBRARIES          = libshmemc-ucx.a
 libshmemc_ucx_a_SOURCES    = comms.c \
+				put-strided.c get-strided.c \
 				pmi-init.c \
 				pmix-client.c
 #				pmi1-client.c
