--- a/configure.ac
+++ b/configure.ac
@@ -123,8 +123,8 @@ AC_TYPE_SIZE_T
 AC_CHECK_TYPES([ptrdiff_t])
 
 # Checks for library functions.
-AC_FUNC_MALLOC
-AC_FUNC_REALLOC
+# AC_FUNC_MALLOC
+# AC_FUNC_REALLOC
 AC_FUNC_MMAP
 AC_CHECK_FUNCS([atexit gettimeofday gethostname uname getpagesize memset])
 
