Plunge the lock implementation down into the appropriate comms layer, the upper API just calls the comms layer

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -4,12 +4,12 @@ else
 SUBDIRS                = gasnet
 endif
 
-LIBSHMEMC_SOURCES      = lock.c # put.c get.c
+# LIBSHMEMC_SOURCES      =
 
-lib_LTLIBRARIES        = libshmemc.la
-libshmemc_la_SOURCES   = $(LIBSHMEMC_SOURCES)
-libshmemc_la_CFLAGS    = $(AM_CFLAGS)
-libshmemc_la_LDFLAGS   = -version-info 0:0:0
+# lib_LTLIBRARIES        = libshmemc.la
+# libshmemc_la_SOURCES   = $(LIBSHMEMC_SOURCES)
+# libshmemc_la_CFLAGS    = $(AM_CFLAGS)
+# libshmemc_la_LDFLAGS   = -version-info 0:0:0
 
-lib_LIBRARIES          = libshmemc.a
-libshmemc_a_SOURCES    = $(LIBSHMEMC_SOURCES)
+# lib_LIBRARIES          = libshmemc.a
+# libshmemc_a_SOURCES    = $(LIBSHMEMC_SOURCES)
