Add new locality code to compile

--- a/src/shmemc/gasnet/Makefile.am
+++ b/src/shmemc/gasnet/Makefile.am
@@ -4,6 +4,7 @@ lib_LIBRARIES          = libshmemc-gasnet.a
 
 libshmemc_gasnet_a_SOURCES    = bail.c \
 				service.c \
+				locality.c \
 				comms.c \
 				gvhack.c \
 				put-strided.c \
